[package]
name = "geo-rand"
version = "0.3.1-alpha.0"
authors = ["Gérald Lelong <gerald.lelong@easymov.fr>"]
edition = "2018"
license = "ISC"
readme = "README.md"
repository = "https://github.com/lelongg/geo-offset"
documentation = "https://docs.rs/geo-offset/"
description = "Generate random geometric shapes"
keywords = ["geo", "polygon", "random"]
categories = ["algorithms"]

[dependencies]
geo = "0.28.0"
num-traits = "0.2.8"
rand = "0.8.3"

[dev-dependencies]
rand_core = "0.6.2"
rand_pcg = "0.3.0"
